--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,9 @@ header nav a {
     color: white;
     text-decoration: none;
 }
+header span {
+    display: none;
+}
 #landingpage {
     display: flex;
     align-items: center;
@@ -173,7 +176,7 @@ header nav a {
     background-color: var(--form-bg);
     padding: 15px 50px;
     display: flex;
-    width: 40%;
+    width: 40%x;
     flex-direction: column;
     border-radius: 15px;
 }
@@ -242,3 +245,123 @@ footer .container div a img {
 
 }
 
+/* ::::::::::::::::::::::::::RESPONSIVITE:::::::::::::::::::::::::::::::: */
+@media screen and (max-width:800px) {
+    body {
+       display: flex;
+       justify-content: center;
+       align-items: center;
+        overflow: auto;
+    }
+    header {
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+
+    }
+    header nav {
+        display: none;
+    }
+    header span {
+        display: flex;
+        color:white
+    }
+    #landingpage {
+        display: flex;
+        flex-direction: column;
+    }
+/* :::::::::::::::::::::::LANDINGPAGE:::::::::::::::::::::::: */
+    #landingpage .right {
+        margin-top: 20px;
+        width: 100%;
+    }
+    #landingpage .right button {
+        width: 80%;
+    }
+    #landingpage .left .image-girl{
+        width: 100%;
+        height: 100%;
+    }
+
+    #landingpage .left .image-girl{
+        width: 100%;
+        height: 100%;
+    }
+    #landingpage .left .circle-blue {
+       display: none;
+    }
+    #landingpage .left .circle-bg {
+       display: none;
+    }
+    #landingpage .big-circle {
+       display: none;
+    } 
+    
+/* :::::::::::::::::::::::LANDINGPAGE:::::::::::::::::::::::: */
+#feature {
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 20px;
+    width: 80%;
+    padding: 20px;
+    line-height: 1.5;
+}
+#feature .elements {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;   
+    height: auto;
+}
+#feature .left h2 {
+    font-size: 30px;
+    line-height: normal;
+}
+#feature .left p {
+    font-size: 15px;
+}
+#feature .elements .element {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin : 25px 10px 10px 0;
+    background-color: var(--form-bg);
+    padding: 15px;
+    width: 100%;
+}
+#feature .elements .element img {
+    width: 40%;
+}
+#feature  .img-right {
+    margin: 25px auto;
+    width: 100%;
+}
+#join {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#join h1 {
+    margin-bottom: 15px;
+}
+#join h1 span {
+    font-size: 4rem;
+    color: var(--color-foun);
+}
+
+footer .container {
+    width: 100%;
+    display: flex;
+    justify-content: right;
+}
+footer a span, footer .container .left {
+    display: none;
+
+}
+
+
+}
